youtube: replace deprecated gdata_youtube_video_get_video_id

grl-youtube.c:507:5: warning: ‘gdata_youtube_video_get_video_id’ is
deprecated: Use gdata_entry_get_id instead [-Wdeprecated-declarations]
  grl_media_set_id (media, gdata_youtube_video_get_video_id (video));
  ^~~~~~~~~~~~~~~~

https://bugzilla.gnome.org/show_bug.cgi?id=770806